--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
+Flask-WTF==1.1.1
+python-dotenv==1.0.0
+supabase==1.2.0
+pydantic==2.5.0
+python-dateutil==2.8.2
+gunicorn==21.2.0
