--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
     {
       "source": "/api/(.*)",
       "destination": "https://your-backend-url.com/$1"
+    },
+    {
+      "source": "/((?!api).*)",
+      "destination": "/index.html"
     }
   ]
 }
